--- a/refurbish/tests/binaries/Makefile
+++ b/refurbish/tests/binaries/Makefile
@@ -1,8 +1,8 @@
 # To build via nix: $ nix-shell -p pkgs.gcc --run 'make -f Makefile.x86_64'
 
-x86exe = $(patsubst %.c,%.x86_64.exe,$(wildcard *.c))
-# ppc32exe = $(patsubst %.c,%.ppc32.exe,$(wildcard *.c))
-ppc64exe = $(patsubst %.c,%.ppc64.exe,$(wildcard *.c))
+x86exe = $(patsubst %.c,%.nostdlib.x86_64.exe,$(wildcard *.c)) $(patsubst %.c,%.stdlib.x86_64.exe,$(wildcard *.c))
+# ppc32exe = $(patsubst %.c,%.nostdlib.ppc32.exe,$(wildcard *.c)) $(patsubst %.c,%.stdlib.ppc32.exe,$(wildcard *.c))
+ppc64exe = $(patsubst %.c,%.nostdlib.ppc64.exe,$(wildcard *.c)) $(patsubst %.c,%.stdlib.ppc64.exe,$(wildcard *.c))
 
 all: $(x86exe) $(ppc64exe)
 
@@ -10,15 +10,21 @@ x86cc = gcc
 ppc32cc = powerpc-linux-gnu-gcc
 ppc64cc = powerpc64-linux-gnu-gcc
 
-CFLAGS = -static -nostdlib -fno-stack-protector
+CFLAGS = -static -fno-stack-protector
 
-%.x86_64.exe: %.c
+%.nostdlib.x86_64.exe: %.c
+	$(x86cc) -DNOSTDLIB -nostdlib $(CFLAGS) $< -o $@
+
+%.stdlib.x86_64.exe: %.c
 	$(x86cc) $(CFLAGS) $< -o $@
 
 %.ppc32.exe: %.c
 	$(ppc32cc) $(CFLAGS) $< -o $@
 
-%.ppc64.exe: %.c
+%.nostdlib.ppc64.exe: %.c
+	$(ppc64cc) -DNOSTDLIB -nostdlib $(CFLAGS) $< -o $@
+
+%.stdlib.ppc64.exe: %.c
 	$(ppc64cc) $(CFLAGS) $< -o $@
 
 clean:
