--- a/renovate/renovate.cabal
+++ b/renovate/renovate.cabal
@@ -39,6 +39,7 @@ library
                        Renovate.BinaryFormat.ELF.Rewriter
                        Renovate.ISA
                        Renovate.Recovery
+                       Renovate.Recovery.Overlap
                        Renovate.Redirect
   -- other-extensions:    
   build-depends:       base >=4.10 && <5,
@@ -46,6 +47,7 @@ library
                        text,
                        containers >= 0.5 && < 0.6,
                        heaps >= 0.3 && < 0.4,
+                       IntervalMap >= 0.6 && < 0.7,
                        mtl >= 2.2 && < 2.3,
                        mwc-random >= 0.13.6.0 && < 0.14,
                        exceptions >= 0.7 && < 0.11,
