--- a/renovate/renovate.cabal
+++ b/renovate/renovate.cabal
@@ -53,6 +53,7 @@ library
                        lens >= 4 && < 5,
                        generic-lens >= 0.5 && < 1.1,
                        located-base >= 0.1 && < 0.2,
+                       union-find >= 0.2 && < 0.3,
                        prettyprinter,
                        parameterized-utils,
                        macaw-base,
